--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babylonjs/core": "^7.27.0",
     "@babylonjs/gui": "^7.27.0",
+    "@babylonjs/loaders": "^7.28.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
